Fix logo from getting too wide

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -19,7 +19,7 @@
 }
 
 .logo {
-  width: 50vw;
+  width: 240px;
   margin: 10px;
   height: 18vh;
   cursor: pointer;
@@ -33,6 +33,23 @@
 }
 
 .arrow {
-  height: 2vh;
-  width: 3vw;
+  height: 16px;
+}
+
+@media screen and (min-width: 700px) {
+  .links {
+    width: 20vw;
+  }
+}
+
+@media screen and (min-width: 1050px) {
+  .links {
+    width: 15vw;
+  }
+}
+
+@media screen and (min-width: 1450px) {
+  .links {
+    width: 10vw;
+  }
 }
